fix crash from Close button in config window

BUG: 405772